# Rudra-Editor

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.unified  EDITOR_ROADMAP.md  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  docker-compose.yml  fix_empty_old.py  package-lock.json  rewrite_del.py  rewrite_rep.py  rewrite_split.py  rewrite_split_fix.py  split_fix.patch
.github/workflows/: ci.yml
crates/s1-convert/: Cargo.toml
crates/s1-convert/src/: chpx.rs  convert.rs  doc_reader.rs  fib.rs  font_table.rs  lib.rs  papx.rs  piece_table.rs  sprm.rs  stylesheet.rs  summary_info.rs
crates/s1-crdt/src/: collab.rs  compression.rs  lib.rs  resolver.rs  state_vector.rs  text_crdt.rs  (+2 more)
crates/s1-format-docx/: Cargo.toml
crates/s1-format-docy/: Cargo.toml
crates/s1-format-html/: Cargo.toml
crates/s1-format-html/src/: error.rs  lib.rs  reader.rs  writer.rs
crates/s1-format-odt/: Cargo.toml
crates/s1-format-odt/src/: content_parser.rs  content_writer.rs  error.rs  lib.rs  manifest_writer.rs  metadata_parser.rs  metadata_writer.rs  property_parser.rs  property_writer.rs  reader.rs  settings_parser.rs  style_parser.rs  style_writer.rs  writer.rs  xml_util.rs
crates/s1-format-odt/tests/: attribute_roundtrip.rs
crates/s1-format-pdf/: Cargo.toml
crates/s1-format-pdf/src/: lib.rs  writer.rs
crates/s1-format-rtf/: Cargo.toml
crates/s1-format-rtf/src/: error.rs  lib.rs  reader.rs  writer.rs
crates/s1-format-txt/: Cargo.toml
crates/s1-format-txt/src/: error.rs  lib.rs  reader.rs  writer.rs
crates/s1-layout/: Cargo.toml
crates/s1-layout/src/: engine.rs  html.rs  layout_helpers.rs  lib.rs  line_breaking.rs  style_resolver.rs  types.rs
crates/s1-layout/tests/: test_chinese_fidelity.rs
crates/s1-model/: Cargo.toml
crates/s1-ops/: Cargo.toml
crates/s1-ops/src/: cursor.rs  history.rs  lib.rs  operation.rs  transaction.rs
crates/s1-ops/tests/: serde_roundtrip.rs
crates/s1-text/: Cargo.toml
crates/s1-text/src/: bidi.rs  font_db.rs  hyphenation.rs  lib.rs  rasterizer.rs  script.rs  shaping.rs
crates/s1engine/: Cargo.toml
crates/s1engine/src/: builder.rs  document.rs  engine.rs  error.rs  format.rs  lib.rs
crates/s1engine/tests/: canvas_fidelity.rs  editing_fidelity.rs  feature_coverage.rs  fidelity.rs  real_document_fidelity.rs  real_world.rs  test_complex_header.rs  wasm_bridge.rs
demo/: index.html
docs/: ADR-001-editing-authority.md  API_DESIGN.md  ARCHITECTURE.md  CANVAS_EDITOR_ELEMENTS_SPEC.md  CANVAS_EDITOR_FIDELITY_PHASE_CHECKLIST.md  CANVAS_EDITOR_FIDELITY_VALIDATION_SPEC.md  CANVAS_EDITOR_FRONTEND_MODULE_PLAN.md  CANVAS_EDITOR_HIGH_LEVEL_ARCHITECTURE.md  CANVAS_EDITOR_IMPLEMENTATION_ROADMAP.md  CANVAS_EDITOR_LOW_LEVEL_DESIGN.md  CANVAS_EDITOR_WASM_API_CONTRACT.md  CODE_GRAPH.md  COMPATIBILITY.md  DEPENDENCIES.md  DOCY_TRANSFORMER_SPEC.md  INTEGRATION_MILESTONES.md  ONLYOFFICE_COMPARISON.md  OVERVIEW.md  PARITY_MILESTONES.md  PHASE4_TRACKER.md  PHASE5_TRACKER.md  PHASE6_TRACKER.md  PHASE7_TRACKER.md  PHASE8_TRACKER.md  PHASE9_TRACKER.md  PRODUCT_ROADMAP.md  ROADMAP.md  SPECIFICATION.md  SPECIFICATIONS_INDEX.md  UNIFIED_SERVER_PLAN.md  WASM_DESIGN.md
docs/fidelity/: IMPROVEMENT_PLAN.md
docs/improvement-plan/: IMPROVEMENT_TRACKER.md  PHASE_1_HARDENING.md  PHASE_2_WASM_OWNERSHIP.md  PHASE_3_PRODUCTION_SCALE.md  PHASE_4_EDITOR_UX.md
docs/issues/: CORE_ENGINE.md  CRITICAL_PRODUCTION_TRACKER.md  DOCX_PARSER.md  EDITOR_UI.md  LAYOUT_TEXT_PDF.md  ODT_PARSER.md  PHASED_ROADMAP.md  README.md  UX_PARITY.md  WASM_FFI_CRDT.md
docs/specs/: CANVAS_RENDERING_SPEC.md  SPELL_CHECK_SPEC.md  TRACK_CHANGES_UX_SPEC.md
editor/: ISSUES_DEEP_SCAN.md  admin.html  index.html  package-lock.json  package.json  vite.config.js
editor/src/: ai-inline.js  ai-panel.js  ai.js  canvas-render.js  collab.js  file.js  find.js  form-controls.js  freehand.js  images.js  input.js  main.js  pagination.js  pdf-annotations.js  pdf-pages.js  pdf-signatures.js  properties-panel.js  render.js  ruler.js  selection.js  shapes.js  spell-check.js  spreadsheet.js  state.js  styles.css  table-formulas.js  tabs.js  toolbar-handlers.js  toolbar.js
editor/tests/: capture-fidelity.spec.js  editor.spec.js  fidelity-dom-baseline.spec.js
editor/wasm-pkg/: s1engine_wasm.js
examples/document-converter/: README.md  main.rs
examples/react-editor/: App.tsx  README.md
ffi/wasm/: Cargo.toml
future/: DISTRIBUTION.md
scripts/: capture-dom-fidelity-baselines.sh  compare-canvas-fidelity.py  download-fonts.sh  feature-test.sh  generate-fidelity-artifacts.sh  relay.js
server/: Cargo.toml
server/src/: admin.rs  auth.rs  collab.rs  config.rs  file_sessions.rs  hooks.rs  integration.rs  main.rs  routes.rs
testdocs/: README.md
tests/: e2e_detailed.mjs  e2e_docy.mjs  e2e_fidelity.mjs  e2e_font_check.mjs  e2e_font_network.mjs  e2e_screenshots.mjs  e2e_sds_debug.mjs
tests/fidelity/: README.md  corpus_manifest.json
web/: adapter.js  docy-test.html  index.html  menubar.js  sdkjs  styles.css
web/pkg/: package.json  s1engine_wasm.d.ts  s1engine_wasm.js  s1engine_wasm_bg.wasm.d.ts
(+115 files in other folders)
