[package]
name = "s1-layout"
description = "Page layout engine for s1engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
s1-model = { workspace = true }
# s1-text — added in Phase 3

[dev-dependencies]
pretty_assertions = { workspace = true }
