[package]
name = "s1-text"
description = "Text processing (shaping, fonts, Unicode) for s1engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
s1-model = { workspace = true }
# harfbuzz-rs, freetype-rs, fontdb, unicode-bidi, unicode-linebreak — added in Phase 3

[dev-dependencies]
pretty_assertions = { workspace = true }
